Updated Text and css link
Updated the login button text and made the body of the page reference the css style by id instead of direct reference to the body object in the css class

--- a/login.html
+++ b/login.html
@@ -5,7 +5,7 @@
 
         <link rel="stylesheet" type="text/css" href="css/login.css">
     </head>
-    <body>
+    <body id="loginBody">
         <div class="container">
             <div class="loginHeader">
                 <h1>IMS</h1>
@@ -22,7 +22,7 @@
                         <input placeholder="password" type="password"/>
                     </div>
                     <div class="loginButtonContainer">
-                        <button>login</button>
+                        <button>Login</button>
                     </div>
                 </form>
             </div>
