--- a/login.html
+++ b/login.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>IMS Login - Inventory Management System</title>
+        <title>VIAL Login | Variable Inventory Acquisition Log</title>
 
-        <link rel="stylesheet" type="text/css" href="css/login.css">
+        <link rel="stylesheet" type="text/css" media="screen" href="css/login.css">
     </head>
     <body id="loginBody">
         <div class="container">
             <div class="loginHeader">
-                <h1>IMS</h1>
-                <p>Inventory Management System</p>
+                <h1>VIAL</h1>
+                <p>Variable Inventory Acquisition Log</p>
             </div>
             <div class="loginBody">
                 <form action="">
