Moved homepage to index.html
Transferred the code from homepage.html to index.html to have the homepage open on initial domain access

--- a/index.html
+++ b/index.html
@@ -1,7 +1,26 @@
 <!DOCTYPE html>
 <html>
-<body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
-</body>
+    <head>
+        <title>VIAL Homepage | Variable Inventory Acquisition Log</title>
+
+        <link rel="stylesheet" type="text/css" href="css/login.css">
+    </head>
+    <body id ="homepageBody">
+        <div class="homepageHeader"></div>
+        <div class="homepageBanner">
+            <div class="homepageContainer">
+                <div class="bannerHeader">
+                    <h1>VIAL</h1>
+                    <p>Variable Inventory Acquisition Log</p>
+                </div>
+                <p class="bannerTagline">
+                    Track all chemicals, consumables, instruments, and gases throughout the lab from 
+                    purchasing logs to use and disposal
+                </p>
+                <div class="bannerIcons">
+
+                </div>
+            </div>
+        </div>
+    </body>
 </html>
